services/loki/helm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loki
